--- a/IELTS_PROJECT/src/main/java/com/mycompany/ielts_project/LoginDialog.form
+++ b/IELTS_PROJECT/src/main/java/com/mycompany/ielts_project/LoginDialog.form
@@ -87,7 +87,7 @@
                                   <Component id="jLabel4" alignment="0" min="-2" max="-2" attributes="0"/>
                                   <Group type="102" alignment="0" attributes="0">
                                       <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
-                                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                      <Group type="103" groupAlignment="0" attributes="0">
                                           <Component id="txtUser" min="-2" pref="227" max="-2" attributes="0"/>
                                           <Component id="txtPasswd" alignment="0" min="-2" pref="227" max="-2" attributes="0"/>
                                           <Component id="jLabel1" alignment="0" min="-2" pref="58" max="-2" attributes="0"/>
@@ -103,12 +103,9 @@
                                                   <Component id="btnLogin" alignment="0" min="-2" pref="94" max="-2" attributes="0"/>
                                               </Group>
                                               <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
-                                              <Group type="103" groupAlignment="0" attributes="0">
-                                                  <Group type="102" attributes="0">
-                                                      <Component id="btnRefresh" min="-2" pref="96" max="-2" attributes="0"/>
-                                                      <EmptySpace min="-2" pref="3" max="-2" attributes="0"/>
-                                                  </Group>
-                                                  <Component id="myCombobox" max="32767" attributes="0"/>
+                                              <Group type="103" groupAlignment="1" attributes="0">
+                                                  <Component id="myCombobox" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="btnRefresh" min="-2" pref="96" max="-2" attributes="0"/>
                                               </Group>
                                           </Group>
                                       </Group>
