--- a/IELTS_PROJECT/src/main/java/Exams/Exam1.form
+++ b/IELTS_PROJECT/src/main/java/Exams/Exam1.form
@@ -517,10 +517,12 @@
         <Component class="javax.swing.JComboBox" name="cbb1">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="3">
-                <StringItem index="0" value="True"/>
-                <StringItem index="1" value="False"/>
-                <StringItem index="2" value="Not Given"/>
+              <StringArray count="5">
+                <StringItem index="0" value="Unselected"/>
+                <StringItem index="1" value="True"/>
+                <StringItem index="2" value="False"/>
+                <StringItem index="3" value="Not Given"/>
+                <StringItem index="4" value=" "/>
               </StringArray>
             </Property>
           </Properties>
@@ -536,10 +538,12 @@
         <Component class="javax.swing.JComboBox" name="cbb2">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="3">
-                <StringItem index="0" value="True"/>
-                <StringItem index="1" value="False"/>
-                <StringItem index="2" value="Not Given"/>
+              <StringArray count="5">
+                <StringItem index="0" value="Unselected"/>
+                <StringItem index="1" value="True"/>
+                <StringItem index="2" value="False"/>
+                <StringItem index="3" value="Not Given"/>
+                <StringItem index="4" value=" "/>
               </StringArray>
             </Property>
           </Properties>
@@ -555,12 +559,15 @@
         <Component class="javax.swing.JComboBox" name="cbb3">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="3">
-                <StringItem index="0" value="True"/>
-                <StringItem index="1" value="False"/>
-                <StringItem index="2" value="Not Given"/>
+              <StringArray count="5">
+                <StringItem index="0" value="Unselected"/>
+                <StringItem index="1" value="True"/>
+                <StringItem index="2" value="False"/>
+                <StringItem index="3" value="Not Given"/>
+                <StringItem index="4" value=" "/>
               </StringArray>
             </Property>
+            <Property name="toolTipText" type="java.lang.String" value=""/>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
